--- a/layout/home.html
+++ b/layout/home.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conecta - Ecossistema de Inovação Pinhais</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style/home.css">
+    <link rel="stylesheet" href="../style/global.css">
 </head>
 <body>
     <header class="bg-white text-dark p-3">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" style="color: rgba(66, 107, 31, 1);" href="#">LOGO CONECTA</a>
+                <a class="navbar-brand" style="color: rgba(66, 107, 31, 1);" href="home.html">LOGO CONECTA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" href="#">Artigos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: rgba(66, 107, 31, 1); font-size: 16px; color: rgba(255, 255, 255, 1);">Login</a>
+                            <a class="nav-link" href="login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: rgba(66, 107, 31, 1); font-size: 16px; color: rgba(255, 255, 255, 1);">Login</a>
                         </li>
                     </ul>
                 </div>
@@ -54,11 +54,10 @@
 
     <section class="container my-5">
         <div class="menu-bar">
-            <div class="menu-option">HOME</div>
-            <div class="menu-option">NOTÍCIAS</div>
-            <div class="menu-option">QUEM SOMOS</div>
+            <a class="menu-option" id="checked">HOME</a>
+            <a href="noticias.html" class="menu-option">NOTÍCIAS</a>
+            <a href="quem-somos.html" class="menu-option">QUEM SOMOS</a>
         </div>
-        
     </section>
 
     <section class="container my-5">
@@ -73,7 +72,7 @@
                 </div>
             </div>
             <div class="col-lg-6 mb-4">
-                <div class="row g-0">
+                <div class="row">
                     <div class="col-md-6">
                         <img src="https://meupiaui.com/wp-content/uploads/2024/01/A-Importancia-da-Cultura-na-Formacao-Social-1-1.webp" alt="Imagem Notícia 2" class="img-fluid">
                     </div>
@@ -164,7 +163,7 @@
     <footer class="bg-dark text-white text-center">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2024 Minha Empresa. Todos os direitos reservados.</p>
+                <p>&copy; 2024 Conecta. Todos os direitos reservados.</p>
                 <p>
                     <a href="#">Termos de Uso</a> |
                     <a href="#">Política de Privacidade</a>
