--- a/layout/quem-somos.html
+++ b/layout/quem-somos.html
@@ -5,26 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem Somos - Conecta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style/home.css">
+    <link rel="stylesheet" href="../style/global.css">
 </head>
 <body>
     <header class="bg-white text-dark p-3">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" style="color: rgba(66, 107, 31, 1);" href="index.html">LOGO CONECTA</a>
+                <a class="navbar-brand" style="color: rgba(66, 107, 31, 1);" href="home.html">LOGO CONECTA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="quem-somos.html">Quem Somos</a>
+                            <a class="nav-link text-dark" href="#">Quero Me Tornar um Membro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="noticias.html">Notícias</a>
+                            <a class="nav-link text-dark" href="#">Prêmios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="login.html">Login</a>
+                            <a class="nav-link text-dark" href="#">Colaboradores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Artigos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: rgba(66, 107, 31, 1); font-size: 16px; color: rgba(255, 255, 255, 1);">Login</a>
                         </li>
                     </ul>
                 </div>
@@ -40,7 +46,7 @@
     <footer class="bg-dark text-white text-center">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2024 Minha Empresa. Todos os direitos reservados.</p>
+                <p>&copy; 2024 Conecta. Todos os direitos reservados.</p>
                 <p>
                     <a href="#">Termos de Uso</a> |
                     <a href="#">Política de Privacidade</a>
