--- a/layout/login.html
+++ b/layout/login.html
@@ -11,7 +11,7 @@
     <header class="bg-white text-dark p-3">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" style="color: rgba(66, 107, 31, 1);" href="home.html">LOGO CONECTA</a>
+                <a class="navbar-brand" style="color: rgba(66, 107, 31, 1);" href="index.html">LOGO CONECTA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
